kubes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: kudis-ip
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: kudis
          servicePort: 80
