kubes/kudis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kudis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kudis
  template:
    metadata:
      labels:
        app: kudis
    spec:
      containers:
        - name: app
          image: saphidev/kudis:2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: kudis
spec:
  sessionAffinity: ClientIP
  selector:
    app: kudis
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: kudis
    servicePort: 80
